tests/lex/invalid/decimal_literal_trailing_junk.zn
def f() {
    // error: characters adjacent to decimal literal
    var x = 123junk;
}
